--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "0.5.6",
+    "@astrojs/tailwind": "^6.0.2",
+    "@fontsource-variable/onest": "5.0.2",
+    "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
-    "astro": "^5.7.4",
-    "tailwindcss": "^4.1.4"
+    "astro": "^5.7.5",
+    "astro-robots-txt": "1.0.0",
+    "typescript": "5.3.3"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.24"
   }
 }
